WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149413
svg/custom/hidpi-masking-clipping.svg fails with accelerated drawing on
https://bugs.webkit.org/show_bug.cgi?id=149413
Summary
svg/custom/hidpi-masking-clipping.svg fails with accelerated drawing on
Tim Horton
Reported
2015-09-21 13:58:09 PDT
svg/custom/hidpi-masking-clipping.svg fails with accelerated drawing on
Attachments
Patch
(5.42 KB, patch)
2015-09-21 13:58 PDT
,
Tim Horton
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-09-21 13:58:24 PDT
Created
attachment 261682
[details]
Patch
Tim Horton
Comment 2
2015-09-21 14:01:02 PDT
<
rdar://problem/22787058
>
Tim Horton
Comment 3
2015-09-21 14:02:38 PDT
http://trac.webkit.org/changeset/190079
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug