svg/custom/hidpi-masking-clipping.svg fails with accelerated drawing on https://bugs.webkit.org/show_bug.cgi?id=149413 <rdar://problem/22787058>

Reviewed by Dean Jackson.

No new tests, this is covered by existing tests.

* rendering/svg/RenderSVGResourcePattern.cpp:
(WebCore::RenderSVGResourcePattern::buildPattern):
(WebCore::RenderSVGResourcePattern::applyResource):
(WebCore::RenderSVGResourcePattern::createTileImage):
* rendering/svg/RenderSVGResourcePattern.h:
Make pattern images respect the accelerated bit of the parent GraphicsContext.


Canonical link: https://commits.webkit.org/167511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190079 268f45cc-cd09-0410-ab3c-d52691b4dbfc